--- a/Tests/Properties/Resources.resx
+++ b/Tests/Properties/Resources.resx
@@ -280,4 +280,13 @@
   <data name="EliteGalacticRegions" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\EliteGalacticRegions.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="GeyserPOI" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GeyserPOI.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OrganicPOI" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OrganicPOI.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Regional" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Regional.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
