--- a/Tests/Properties/Resources.resx
+++ b/Tests/Properties/Resources.resx
@@ -130,9 +130,6 @@
   <data name="mipmap" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\asteroid texture one side mipmap levels 0 to 8.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="dotted" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dotted.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="dotted2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dotted2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -171,9 +168,6 @@
   </data>
   <data name="Galaxy_L180" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Galaxy_L180.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ImportSphere" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ImportSphere.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="StarFlare2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\StarFlare2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -297,5 +291,11 @@
   </data>
   <data name="Backwards" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Backwards.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dotted" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dotted.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dotted1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dotted1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
