--- a/Tests/Properties/Resources.resx
+++ b/Tests/Properties/Resources.resx
@@ -301,4 +301,7 @@
   <data name="Rings_1_rocky" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Rings_1_rocky.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="HMCv37" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HMCv37.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
