--- a/TestControls/Properties/Resources.resx
+++ b/TestControls/Properties/Resources.resx
@@ -136,4 +136,7 @@
   <data name="Logo8bpp" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo8bpp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Rotate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Rotate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
